<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cosmin.course3homework.MainActivity"
    android:fillViewport="true">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >


            <ImageView
                android:contentDescription="@string/poza"
                android:id="@+id/user_profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/user_profile"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>

            <EditText
                android:id="@+id/Nume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:textColorHint="@color/colorHint"
                android:layout_toRightOf="@+id/user_profile"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:maxLines="1"
                android:background="@drawable/border" />
            <EditText
                android:id="@+id/Prenume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_prenume"
                android:textColorHint="@color/colorHint"
                android:layout_below="@+id/Nume"
                android:layout_toRightOf="@+id/user_profile"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:maxLines="1"
                android:background="@drawable/border"
                />
            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_email"
                android:textColorHint="@color/colorHint"
                android:layout_below="@+id/Prenume"
                android:layout_toRightOf="@+id/user_profile"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:maxLines="1"
                android:background="@drawable/border"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:id="@+id/Telefon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_telefon"
                android:textColorHint="@color/colorHint"
                android:layout_below="@+id/Email"
                android:layout_toRightOf="@+id/user_profile"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:maxLines="1"
                android:background="@drawable/border"
                android:inputType="phone"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            >
            <TextView
                android:id="@+id/universitate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/universitate"
                android:textSize="20sp"
                android:textColor="@color/colorUniversitate"
                android:textStyle="bold"/>


            <RadioGroup
                android:id="@+id/grupUniversitati"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/universitate"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/unibuc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unibuc"
                    android:padding="10dp"/>

                <RadioButton
                    android:id="@+id/poli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/politehnica"
                    android:padding="10dp"/>
                <RadioButton
                    android:id="@+id/pitesti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pitesti"
                    android:padding="10dp"/>

            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="16dp"
            >

            <TextView
                android:id="@+id/cunostinte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cunostinte"
                android:textColor="@color/colorUniversitate"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <CheckBox
                android:id="@+id/oop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cunostinte"
                android:layout_marginTop="10dp"
                android:text="@string/oop"
                android:textSize="20sp"
                android:padding="10dp"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_below="@+id/cunostinte"
                android:layout_marginTop="8dp"
                android:text="@string/C"
                android:textSize="20sp"
                android:padding="10dp"
                android:id="@+id/c"/>

            <CheckBox
                android:id="@+id/java"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/c"
                android:padding="10dp"
                android:text="@string/java"
                android:textSize="20sp"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_below="@+id/c"
                android:text="@string/Csharp"
                android:textSize="20sp"
                android:padding="10dp"
                android:id="@+id/csharp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/stagiu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stagiu"
                android:padding="10dp"
                android:textColor="@color/colorUniversitate"/>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stagiu"
                />

            <ImageView
                android:contentDescription="@string/android"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/androidhappy"
                android:id="@+id/androidhappy"
                android:layout_below="@+id/stagiu"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

            <Button
                android:id="@+id/salveaza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/androidhappy"
                android:layout_marginTop="10dp"
                android:text="@string/salveaza"
                android:textColor="@color/colorSalveaza"
                android:background="@color/colorButton"/>


        </RelativeLayout>


        </LinearLayout>


    </ScrollView>

    <ListView
        android:id="@+id/lv_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:visibility="gone"
        />





</RelativeLayout>


